@@ -4,6 +4,9 @@ Changelog
 1.0 (unreleased)
 ------------------
 
+- Bootstrap: apply pagination classes for listing bars (such as for folders or
+  search results). 
+  [davidjb]
 - Bootstrap: Modify all CSS and JS resources to use Plone's ``base`` variable,
   supplied by plone.app.theming. Without this, relative URLs result in the
   same resources being loaded on different URLs for every page request.
